<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item that displays Guardian News item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/newsHeight"
        android:layout_margin="@dimen/sm_margin"
        android:background="@android:color/white"
        android:elevation="1dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/noWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/thumbnail"
            android:gravity="center"
            android:scaleType="centerCrop"
            tools:text="@string/holding_thumbnail" />

        <LinearLayout
            android:layout_width="@dimen/noWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/sm_margin"
            android:layout_marginStart="@dimen/sm_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingBottom="@dimen/sm_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_text"
                tools:text="@string/holding_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:listDivider"
                android:orientation="horizontal"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/section_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sm_margin"
                    android:layout_marginRight="@dimen/sm_margin"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/hori_text"
                    tools:text="@string/holding_topic" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/sm_margin"
                    android:layout_marginLeft="@dimen/sm_margin"
                    android:layout_marginRight="@dimen/sm_margin"
                    android:layout_marginStart="@dimen/sm_margin"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/hori_text"
                    tools:text="@string/holding_date" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sm_margin"
                    android:layout_marginStart="@dimen/sm_margin"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/hori_text"
                    tools:text="@string/holding_author" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>